--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /.vs
 /DevDayDemo/DevDayDemo.Android/obj/Release
 /DevDayDemo/DevDayDemo.UWP/obj/x86/Release
+/DevDayDemo/DevDayDemo.iOS/obj/iPhoneSimulator/Debug
+/DevDayDemo/DevDayDemo.UWP/obj/x86/Debug
