--- a/DevDayDemo/DevDayDemo.iOS/DevDayDemo.iOS.csproj
+++ b/DevDayDemo/DevDayDemo.iOS/DevDayDemo.iOS.csproj
@@ -134,6 +134,9 @@
     </Reference>
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\mclogo.png" />
+  </ItemGroup>
   <Import Project="..\DevDayDemo\DevDayDemo.projitems" Label="Shared" Condition="Exists('..\DevDayDemo\DevDayDemo.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
