--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /DevDayDemo/DevDayDemo.UWP/obj/x86/Release
 /DevDayDemo/DevDayDemo.iOS/obj/iPhoneSimulator/Debug
 /DevDayDemo/DevDayDemo.UWP/obj/x86/Debug
+/DevDayDemo/DevDayDemo.Android/bin/Release
