--- a/DevDayDemo/DevDayDemo.Android/DevDayDemo.Android.csproj
+++ b/DevDayDemo/DevDayDemo.Android/DevDayDemo.Android.csproj
@@ -165,6 +165,7 @@
     <None Include="Properties\AndroidManifest.xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="mclogo.png" />
     <Content Include="Resources\mclogo.png" />
   </ItemGroup>
   <Import Project="..\DevDayDemo\DevDayDemo.projitems" Label="Shared" Condition="Exists('..\DevDayDemo\DevDayDemo.projitems')" />
