--- a/DevDayDemo/DevDayDemo.Android/DevDayDemo.Android.csproj
+++ b/DevDayDemo/DevDayDemo.Android/DevDayDemo.Android.csproj
@@ -21,7 +21,7 @@
     <TargetFrameworkVersion>v7.1</TargetFrameworkVersion>
     <AndroidStoreUncompressedFileExtensions />
     <MandroidI18n />
-    <JavaMaximumHeapSize />
+    <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
     <JavaOptions />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
