--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
 /.vs
 /DevDayDemo/DevDayDemo.Android/obj/Release
 /DevDayDemo/DevDayDemo.Android/obj/Debug
-/DevDayDemo/DevDayDemo.UWP/obj/x86/Release
+/DevDayDemo/DevDayDemo.UWP/obj/x86/bin/Release
 /DevDayDemo/DevDayDemo.iOS/obj/iPhoneSimulator/Debug
 /DevDayDemo/DevDayDemo.iOS/obj/iPhoneSimulator/Release
-/DevDayDemo/DevDayDemo.UWP/obj/x86/Debug
+/DevDayDemo/DevDayDemo.UWP/obj/x86/bin/Debug
+/DevDayDemo/DevDayDemo.UWP/bin
+/DevDayDemo/DevDayDemo.UWP/bin/x86/Release
 /DevDayDemo/DevDayDemo.Android/bin/Release
 /DevDayDemo/DevDayDemo.Android/bin/Debug
 /UITestXam/obj/Debug
 /UITestXam/obj/Release
+/DevDayDemo/DevDayDemo.UWP/obj/x86
