--- a/DevDayDemo/DevDayDemo.UWP/project.lock.json
+++ b/DevDayDemo/DevDayDemo.UWP/project.lock.json
@@ -24305,12 +24305,12 @@
   },
   "project": {
     "restore": {
-      "projectUniqueName": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepo\\DevDayDemo\\DevDayDemo.UWP\\DevDayDemo.UWP.csproj",
+      "projectUniqueName": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepoDemo\\DevDayDemo\\DevDayDemo.UWP\\DevDayDemo.UWP.csproj",
       "projectName": "DevDayDemo.UWP",
-      "projectPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepo\\DevDayDemo\\DevDayDemo.UWP\\DevDayDemo.UWP.csproj",
-      "projectJsonPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepo\\DevDayDemo\\DevDayDemo.UWP\\project.json",
+      "projectPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepoDemo\\DevDayDemo\\DevDayDemo.UWP\\DevDayDemo.UWP.csproj",
+      "projectJsonPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepoDemo\\DevDayDemo\\DevDayDemo.UWP\\project.json",
       "packagesPath": "C:\\Users\\manig\\.nuget\\packages\\",
-      "outputPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepo\\DevDayDemo\\DevDayDemo.UWP\\obj\\",
+      "outputPath": "C:\\Users\\manig\\OneDrive\\Documents\\GitHub\\DevDayRepoDemo\\DevDayDemo\\DevDayDemo.UWP\\obj\\",
       "projectStyle": "ProjectJson",
       "fallbackFolders": [
         "C:\\Program Files (x86)\\Microsoft SDKs\\NuGetPackagesFallback\\"
